Feat (Expense mutations): Adds mutations for expenses and adds tests.